fix footer is overlapping with the content on mobile screens. This is a common CSS positioning problem.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
-body {
-  font-family: 'Roboto', sans-serif;
+html, body {
+  height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
   min-height: 100vh;
   position: relative;
-  padding-bottom: 60px;
 }
 
 .gravatar {
   border-radius: 50%;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  background-color: #f5f5f5;
 }
 
 .pagination {
